[tool.poetry]
name = "bloodbank-marl"
version = "0.1.0"
description = ""
authors = ["Joe Farrington <farrington.joe@gmail.com>"]
readme = "README.md"
packages = [{include = "bloodbank_marl"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
orbax-checkpoint = "^0.3.5"
orbax-export = "^0.0.3"
hydra-core = "^1.3.2"
distrax = "^0.1.4"
gymnax = "^0.0.6"
flax = "^0.7.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
tensorflow-probability = "^0.21.0"
scipy = "^1.11.2"
evosax = "^0.1.4"
gymnasium = "^0.29.1"
pettingzoo = "^1.24.0"
wandb = "^0.15.8"

[tool.poetry.group.jax.dependencies]
jax = {extras = ["cuda12_pip"], version = "^0.4.14", source = "jax"}
jaxlib = {version = "^0.4.14", source = "jaxlib"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^22.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-datadir = "^1.4.1"

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
default = false
secondary = false

[[tool.poetry.source]]
name = "jaxlib"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"